--- a/nss/package.json
+++ b/nss/package.json
@@ -6,8 +6,11 @@
         "@testing-library/jest-dom": "^5.14.1",
         "@testing-library/react": "^11.2.7",
         "@testing-library/user-event": "^12.8.3",
+        "bootstrap": "^5.1.1",
         "react": "^17.0.2",
+        "react-bootstrap": "^2.0.0-rc.0",
         "react-dom": "^17.0.2",
+        "react-router-dom": "^5.3.0",
         "react-scripts": "4.0.3",
         "web-vitals": "^1.1.2"
     },
@@ -15,7 +18,9 @@
         "start": "react-scripts start",
         "build": "CI='' react-scripts build",
         "test": "react-scripts test",
-        "eject": "react-scripts eject"
+        "eject": "react-scripts eject",
+        "build:css": "postcss src/assets/tailwind.css -o src/assets/main.css",
+        "watch:css": "postcss src/assets/tailwind.css -o src/assets/main.css"
     },
     "eslintConfig": {
         "extends": [
@@ -36,7 +41,10 @@
         ]
     },
     "devDependencies": {
-        "gh-pages": "^3.2.3"
+        "autoprefixer": "^10.3.7",
+        "gh-pages": "^3.2.3",
+        "postcss-cli": "^9.0.1",
+        "tailwindcss": "^2.2.16"
     },
     "homepage": "."
 }
